[package]
name = "rep-grep"
version = "0.0.7"
edition = "2021"
authors = ["Roben Kleene <contact@robenkleene.com>"]
description = "wgrep/write-grep CLI"
readme = "README.md"
keywords = ["sed", "find", "replace", "regex", "grep"]
license = "MIT"
homepage = "https://github.com/robenkleene/rep-grep"
repository = "https://github.com/robenkleene/rep-grep.git"
categories = ["command-line-utilities", "text-processing", "development-tools"]

[[bin]]
name = "rep"
path = "src/main.rs"

[dependencies]
regex = "1.4.3"
clap = { version = "4", features = ["derive"] }
unescape = "0.1.0"
memmap2 = "0.9"
tempfile = "3.2.0"
thiserror = "1.0.24"
diffy-fork-filenames = "0.4.0"
indexmap = "1.9.2"
shell-words = "1.1.0"
grep-cli = "0.1.7"
ctrlc = "3.2.5"

[dev-dependencies]
assert_cmd = "1.0.3"
anyhow = "1.0.38"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
man = "0.3.0"

[profile.release]
opt-level = 3
lto = true
